--- a/file.html
+++ b/file.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <p id="paragraph">
-    THIS IS A TEST SITE !!!
+    THIS IS AN HTML FOR TESTING PURPOSE ONLY!!!
 <div>
     <p>
         <img src="abracadabra.jpeg"/>
@@ -14,11 +14,10 @@
                 Hello World
             </h1>
         </div>
-        <div></div>
+        <div> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Fcute-penguin&psig=AOvVaw0mwpcUTDJuRuewQwflhvH0&ust=1666261170210000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCJjzx96I7PoCFQAAAAAdAAAAABAD"/></div>
         <div></div>
         <div></div>
     </div>
 </div>
-</p>
-
+</p>    <!-- This is where the error should show. p tag closed before a p openong tag was made.-->
 </html>
